sfdx-source/force-app/main/default/objects/Instant_Ingestor_Event_Binding__mdt/Instant_Ingestor_Event_Binding__mdt.object-meta.xml
<CustomObject>
    <label>Instant Ingestor Event Binding</label>
    <description>LEM-14648: It stores the details related to instant ingestor event.</description>
    <pluralLabel>Instant Ingestor Event Bindings</pluralLabel>
</CustomObject>