sfdx-source/force-app/main/default/objects/Instant_Ingestor_Event_Binding__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>LEM-14648: To store the factory class name that should be called based on the topic.</description>
    <label>Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>