sfdx-source/force-app/main/default/objects/Instant_Ingestor_Event_Binding__mdt/fields/Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Scope_Size__c</fullName>
    <description>LEM-14648: It is used to store the scope size for chunks processing.</description>
    <label>Scope Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>