sfdx-source/force-app/main/default/objects/Instant_Ingestor_Event_Binding__mdt/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>LEM-14648: It is used to store the topic name.</description>
    <label>Topic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>